# gablec_agent

./: .gitignore  Dockerfile  gemini_image_test.py  gemini_probe.py  menu_cache.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily.yml
docs/superpowers/plans/: 2026-06-01-decouple-scrape-send.md
docs/superpowers/specs/: 2026-06-01-decouple-scrape-send-design.md
gablec_script/: gablec_daily.py  main.py
tests/: conftest.py  test_send_logic.py
