[project]
name = "gablec-bot"
version = "0.2.0"
description = "Daily lunch menu bot for Slack - scrapes Facebook restaurants and uses AI to extract menus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=2.2.1",
    "google-genai>=1.46.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.1",
    "slack-sdk>=3.37.0",
]
